# lmorbits.app_lm_template

./: .gitignore  .gitmodules  README.md  appdeps.example.env  appdeps.toml  pyapp.yaml  pyproject.toml
notebook/: test.ipynb
src/airplane_simple_chatbot/: agent.py  config.py  graph.py  main.py  schemas.py  utils.py
src/app_lm_template/: agent.py  config.py  graph.py  main.py  schemas.py
