[project]
name = "app_lm_template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "parsa", email = "parsa.miraghaie@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["langgraph>=0.4.3", "pyapp[local-langchain]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pyapp = { git = "https://github.com/Parsa-Mir/app.git", subdirectory = "pyapp" }

[dependency-groups]
dev = ["ipykernel>=6.29.5", "pyppeteer>=2.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/app_lm_template"]

[project.scripts]
inference = "app_lm_template.main:inference"
graph = "app_lm_template.main:get_graph"
